# soci

cmake/: SociDependencies.cmake
cmake/modules/: FindSQLite3.cmake
include/soci/: row.h  soci-backend.h
src/: CMakeLists.txt
src/backends/msql/: CMakeLists.txt  blob.cpp  common.cpp  common.h  factory.cpp  row-id.cpp  session.cpp  soci-msql.h  standard-into-type.cpp  standard-use-type.cpp  statement.cpp  vector-into-type.cpp  vector-use-type.cpp
src/backends/msql/test/: CMakeLists.txt  test-msql.cpp
src/backends/sqlite3/: statement.cpp
src/cmake/: SociDependencies.cmake
src/cmake/dependencies/: mSQL.cmake
src/cmake/modules/: FindSQLite3.cmake  FindmSQL.cmake
src/core/: row.cpp  row.h  soci-backend.h  soci.h
